cmake_minimum_required(VERSION 3.24)
project(competitive_programming)

set(CMAKE_CXX_STANDARD 14)

add_executable(competitive_programming
        "Codeforces Round 915 (Div. 2)/solutions/a.cpp"
        "Codeforces Round 915 (Div. 2)/solutions/b.cpp"
        "Codeforces Round 915 (Div. 2)/solutions/c.cpp"
        "Codeforces Round 915 (Div. 2)/solutions/d.cpp"
        "Codeforces Round 915 (Div. 2)/solutions/template.cpp"
        "Kazakhstan Competitive Programming Championship #2: Elimination 1/solutions/a.cpp"
        "Kazakhstan Competitive Programming Championship #2: Elimination 1/solutions/c.cpp"
        "Yandex Cup 2023 - Algorithm Qualification/solutions/a.cpp"
        "Yandex Cup 2023 - Algorithm Qualification/solutions/b.cpp"
        "Yandex Cup 2023 - Algorithm Qualification/solutions/c.cpp"
        template.cpp)
